--- a/src/UiComponents/atom/avatar/Avatar.scss
+++ b/src/UiComponents/atom/avatar/Avatar.scss
@@ -1,12 +1,9 @@
 .avatar {
-  background: url("../../../../public//images/logo-512.png");
   background-size: contain;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   margin: 0 auto;
-  box-shadow: 0px 0px 2px #a8a8a8,
-    // down color is bg color it beeds to be seam
-    0px 0px 0px 5px #ecf0f3,
-    8px 8px 15px #a7aaaf, -8px -8px 15px #fff;
+  box-shadow: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ecf0f3, 8px 8px 15px #a7aaaf,
+    -8px -8px 15px #fff;
 }
