--- a/src/UiComponents/atom/input/inputField.scss
+++ b/src/UiComponents/atom/input/inputField.scss
@@ -1,23 +1,36 @@
+@import "../../../styles/colors.scss";
+@import "../../../styles/mixins.scss";
+
 .input {
-  color: #555;
+  color: $monoFont;
   margin-bottom: 30px;
   text-align: left;
   &__content {
     padding: 20px 10px 20px 5px;
     border-radius: 25px;
-    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
-    .icon {
-      height: 22px;
-      margin: 0 10px -3px 25px;
-      color: rgb(155, 155, 155);
-      font-size: 20px;
+    box-shadow: $monoInputShadow;
+    transition: 0.5s;
+    &:hover {
+      box-shadow: $monoInputShadowHover;
     }
+
     input {
       border: none;
       background: none;
       outline: none;
       font-size: 18px;
-      color: rgb(102, 102, 102);
+      color: $monoFont30;
+      width: 90%;
+
+      @include resp(870px) {
+        width: 60%;
+      }
     }
+  }
+  &__content > :first-child {
+    height: 22px;
+    margin: 0 10px -3px 25px;
+    color: $monoFont30;
+    font-size: 20px;
   }
 }
