--- a/src/components/calorieCalculator/CalorieCalculator.scss
+++ b/src/components/calorieCalculator/CalorieCalculator.scss
@@ -2,7 +2,7 @@
 @import "../../styles/mixins.scss";
 
 .calculator_wrapper {
-  background-color: white;
+  background-color: rgb(240, 240, 240);
   box-shadow: $box-shadow;
   border: 1px solid rgba(236, 236, 236, 0.692);
   border-radius: 15px;
