--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -4,56 +4,59 @@
 
 .homePage {
   width: 100%;
-  height: 100vh;
-  background-image: url("../../../public/images/bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  .bg {
-    background: rgb(201, 214, 220);
-    background: linear-gradient(
-      150deg,
-      rgba(201, 214, 220, 0) 0%,
-      rgba(201, 214, 220, 1) 99%
-    );
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-  .content {
-    max-width: 1900px;
-    width: 90%;
-    margin: 0 auto;
-    @include resp(500px) {
-      width: 100%;
-    }
+  &__content {
+    width: 80%;
+    max-width: 1300px;
+    margin: 0px auto;
 
     .hero {
-      @include resp(500px) {
-        background-color: rgba(255, 255, 255, 0.856);
-      }
-      .content {
+      height: 90vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .leftSide {
         width: 50%;
-        padding-top: 120px;
-        margin: 0 auto;
-        @include resp(500px) {
-          width: 90%;
+        text-align: left;
+        h1 {
+          font-size: 48px;
+          color: $monoFont30;
         }
-        .small {
-          text-align: left;
-          margin-top: 20px;
-          font-weight: 700;
+        p {
+          width: 90%;
+          margin-top: 25px;
+          color: $monoFont;
+          margin-bottom: 90px;
+        }
+      }
+      .rightSide {
+        width: 50%;
+        position: relative;
+        &__content {
+          .backgroundElement {
+            margin: 0 auto;
+            width: 500px;
+            height: 500px;
 
-          @include resp(500px) {
-            padding-bottom: 30px;
+            background: linear-gradient(
+              270deg,
+              rgba(244, 85, 86, 1) 0%,
+              rgba(252, 138, 68, 1) 100%
+            );
+            border-radius: 50%;
+          }
+          img {
+            position: absolute;
+            margin-left: -140px;
+            margin-top: -40px;
           }
         }
       }
     }
+    .todaysPick {
+      height: 100vh;
+    }
     .calculator {
-      margin-top: 150px;
+      height: 100vh;
     }
   }
 }
