--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -21,3 +21,13 @@ $rightBar-bg: #f8f8f8;
 $protein-color: #9163e3;
 $carbs-color: #e7bb43;
 $fat-color: #81bfbb;
+
+$monoBg: #ecf0f3;
+$monoFont: #555;
+$monoFont30: rgb(155, 155, 155);
+$monoPaperShadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+$monoInputShadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+$monoInputShadowHover: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+$monoButtonShadow: 3px 3px 10px #d3d3d3, -3px -3px 8px rgb(240, 240, 240);
+$monoButtonShadowHover: 8px 8px 10px #d3d3d3, -8px -8px 8px rgb(240, 240, 240);
+$monoButtonBackground: linear-gradient(165deg, #f2f2f2 0%, #fff 50%);
