--- a/src/UiComponents/atom/paper/Paper.scss
+++ b/src/UiComponents/atom/paper/Paper.scss
@@ -7,7 +7,7 @@
   border-radius: 40px;
   background-color: $monoBg;
   color: $monoFont;
-  box-shadow: $monoPaperShadow;
+  // box-shadow: $monoPaperShadow;
   &__content {
     padding: 35px;
   }
