--- a/src/UiComponents/organism/Calculator/Calculator.scss
+++ b/src/UiComponents/organism/Calculator/Calculator.scss
@@ -1,10 +1,15 @@
 @import "../../../styles/colors.scss";
 
-.calculator {
+.calculator-wrapper {
   margin-top: 150px;
-  h2 {
-    margin-bottom: 30px;
-    color: $monoFont;
-    padding: 30px 0;
+  .result {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 400px;
+
+    .number {
+      font-size: 120px;
+    }
   }
 }
