--- a/src/UiComponents/organism/Navigation/Navigation.scss
+++ b/src/UiComponents/organism/Navigation/Navigation.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/colors.scss";
 @import "../../../styles/mixins.scss";
 .navigation {
+  padding-top: 30px;
   width: 100%;
   height: 80px;
   align-items: center;
