--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -57,6 +57,13 @@
     }
     .calculator {
       height: 100vh;
+      h2 {
+        margin: 30px auto;
+        color: $monoFont;
+        padding: 30px 0;
+        font-size: 36px;
+        text-transform: uppercase;
+      }
     }
   }
 }
