--- a/src/UiComponents/atom/SelectInput/SelectInput.scss
+++ b/src/UiComponents/atom/SelectInput/SelectInput.scss
@@ -5,10 +5,11 @@
   color: $monoFont;
   margin-bottom: 30px;
   text-align: left;
+  opacity: 0;
   &__content {
     padding: 20px 10px 20px 5px;
     border-radius: 25px;
-    box-shadow: $monoInputShadow;
+    // box-shadow: $monoInputShadow;
     transition: 0.5s;
     &:hover {
       box-shadow: $monoInputShadowHover;
