--- a/src/UiComponents/atom/input/inputField.scss
+++ b/src/UiComponents/atom/input/inputField.scss
@@ -5,6 +5,7 @@
   color: $monoFont;
   margin-bottom: 30px;
   text-align: left;
+  opacity: 0;
   &__content {
     padding: 20px 10px 20px 5px;
     border-radius: 25px;
