--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -1,6 +1,5 @@
 @import "../../styles/colors.scss";
 @import "../../styles/mixins.scss";
-@import "../../styles/constants.scss";
 
 .homePage {
   width: 100%;
@@ -10,16 +9,22 @@
     margin: 0px auto;
 
     .hero {
-      height: 90vh;
+      height: 100vh;
       display: flex;
       justify-content: space-between;
       align-items: center;
+
+      @include resp(1100px) {
+      }
       .leftSide {
         width: 50%;
         text-align: left;
+        @include resp(1100px) {
+          width: 100%;
+        }
         h1 {
           font-size: 48px;
-          color: $monoFont30;
+          color: $monoFont;
         }
         p {
           width: 90%;
@@ -31,6 +36,9 @@
       .rightSide {
         width: 50%;
         position: relative;
+        @include resp(1100px) {
+          display: none;
+        }
         &__content {
           .backgroundElement {
             margin: 0 auto;
@@ -52,11 +60,9 @@
         }
       }
     }
-    .todaysPick {
-      height: 100vh;
-    }
+
     .calculator {
-      height: 100vh;
+      padding: 60px 0;
       h2 {
         margin: 30px auto;
         color: $monoFont;
@@ -64,6 +70,18 @@
         font-size: 36px;
         text-transform: uppercase;
       }
+    }
+  }
+}
+.footer {
+  margin-top: 200px;
+  width: 100%;
+  height: 500px;
+  background-color: rgb(82, 82, 82);
+  footer {
+    display: flex;
+    justify-content: space-around;
+    .section {
     }
   }
 }
