--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -28,6 +28,10 @@ $monoFont30: rgb(155, 155, 155);
 $monoPaperShadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
 $monoInputShadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
 $monoInputShadowHover: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
-$monoButtonShadow: 3px 3px 10px #d3d3d3, -3px -3px 8px rgb(240, 240, 240);
-$monoButtonShadowHover: 8px 8px 10px #d3d3d3, -8px -8px 8px rgb(240, 240, 240);
+
+$monoButtonShadow: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ecf0f3,
+  8px 8px 15px #a7aaaf, -8px -8px 15px #fff;
+$monoButtonShadowHover: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ecf0f3,
+  4px 4px 15px #a7aaaf, -4px -4px 15px #fff;
+
 $monoButtonBackground: linear-gradient(165deg, #f2f2f2 0%, #fff 50%);
