--- a/src/UiComponents/organism/LoginForm/LoginForm.scss
+++ b/src/UiComponents/organism/LoginForm/LoginForm.scss
@@ -1,5 +1,11 @@
 .login {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &__content {
+    width: 50%;
     .title {
       text-align: center;
       padding-top: 24px;
