--- a/src/UiComponents/atom/input/inputField.scss
+++ b/src/UiComponents/atom/input/inputField.scss
@@ -7,6 +7,7 @@
   text-align: left;
   opacity: 0;
   &__content {
+    display: flex;
     padding: 20px 10px 20px 5px;
     border-radius: 25px;
     transition: 0.5s;
