--- a/src/pages/signIn/SignIn.scss
+++ b/src/pages/signIn/SignIn.scss
@@ -1,4 +1,6 @@
 @import "../../styles/colors.scss";
+@import "../../styles/mixins.scss";
+
 .signin {
   background-color: $monoBg;
   height: 100vh;
@@ -12,11 +14,18 @@
     border-radius: 30px;
     background-color: $monoBg;
     width: 50%;
+    @include resp(500px) {
+      width: 100%;
+      padding: 20px;
+    }
     .warning {
       h1 {
-        font-size: 36px;
+        font-size: 2.25rem;
         color: $monoFont;
         margin-top: 50px;
+        @include resp(500px) {
+          font-size: 1.8rem;
+        }
       }
       p {
         margin-top: 24px;
