--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -24,7 +24,7 @@ $fat-color: #81bfbb;
 
 $monoBg: #ecf0f3;
 $monoFont: #555;
-$monoFont30: rgb(155, 155, 155);
+$monoFont30: #9b9b9b;
 $monoPaperShadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
 $monoInputShadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
 $monoInputShadowHover: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
