--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -3,12 +3,7 @@
 @import "../../styles/constants.scss";
 
 .layout {
-  background: rgb(201, 214, 220);
-  background: linear-gradient(
-    150deg,
-    rgba(201, 214, 220, 0) 0%,
-    rgba(201, 214, 220, 1) 99%
-  );
+  background: $monoBg;
   min-height: 100vh;
 
   .dashboard {
