--- a/src/UiComponents/organism/DashNavigation/DashNavigation.scss
+++ b/src/UiComponents/organism/DashNavigation/DashNavigation.scss
@@ -87,7 +87,7 @@
         width: 85%;
         display: flex;
         justify-content: space-around;
-        box-shadow: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ecf0f3,
+        box-shadow: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ffffff,
           8px 8px 7px #a7aaaf, -8px -8px 7px #fff;
         .link-item {
           font-size: 24px;
