--- a/src/components/dayMenu/DayMenu.scss
+++ b/src/components/dayMenu/DayMenu.scss
@@ -3,7 +3,6 @@
 
 .dayMenu {
   width: 100%;
-
   .content {
     padding: 15px 15px 0 15px;
     width: 93%;
@@ -13,21 +12,22 @@
       padding: 0;
     }
     .screenNavigation {
+      box-shadow: $monoFrame;
+      padding: 10px 0;
+      border-radius: 10px;
       margin-bottom: 30px;
       width: 100%;
       @include resp(400px) {
-        margin-bottom: 0;
+        margin-bottom: 15px;
       }
       .navContent {
         display: flex;
         align-items: center;
         flex-direction: column;
 
-        @include resp(1122px) {
-        }
-        .screenTitle {
-          font-size: 36px;
-          color: $orange-main;
+        .calorieGoal {
+          font-size: 1.7rem;
+          color: $monoFont;
           font-weight: 900;
           width: 100%;
           @include resp(330px) {
@@ -68,25 +68,14 @@
               font-size: 20px;
             }
             cursor: pointer;
-            transition: 0.3s;
-            &:hover {
-              background-color: $orange-main;
-              color: white;
-            }
           }
         }
       }
     }
-    .line {
-      width: 100%;
-      height: 2px;
-      background-color: $orange-main;
-      margin-bottom: 30px;
-    }
+
     .menu {
       display: flex;
       justify-content: space-between;
-
       width: 100%;
       height: 100%;
       .menu_content {
@@ -96,8 +85,7 @@
         @include resp(1122px) {
           display: block;
         }
-        .meal {
-        }
+
         .stats {
           box-shadow: $box-shadow;
           background-color: white;
