--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,11 @@
 * {
   margin: 0;
   padding: 0;
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 body {
   font-family: "Roboto", sans-serif;
