--- a/src/components/meal/Meal.scss
+++ b/src/components/meal/Meal.scss
@@ -7,6 +7,7 @@
   box-shadow: $monoFrame;
   border-radius: 8px;
   margin: 20px auto;
+  opacity: 0;
   @include resp(500px) {
     width: 95%;
   }
