--- a/src/UiComponents/organism/LoginForm/LoginForm.scss
+++ b/src/UiComponents/organism/LoginForm/LoginForm.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/colors.scss";
+@import "../../../styles/mixins.scss";
+
 .login {
   width: 100%;
   height: 100vh;
@@ -6,6 +9,9 @@
   align-items: center;
   &__content {
     width: 60%;
+    @include resp(500px) {
+      width: 100%;
+    }
     .title {
       text-align: center;
       padding-top: 24px;
