--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
+  text-decoration: none;
 }
 body {
   font-family: "Roboto", sans-serif;
