--- a/src/UiComponents/organism/DashNavigation/DashNavigation.scss
+++ b/src/UiComponents/organism/DashNavigation/DashNavigation.scss
@@ -6,7 +6,7 @@
     .desktopNav {
       width: 260px;
       height: 100vh;
-      background-color: white;
+      background-color: #fff;
       position: fixed;
       left: 0;
       top: 0;
