--- a/src/UiComponents/atom/ButtonShell/ButtonShell.scss
+++ b/src/UiComponents/atom/ButtonShell/ButtonShell.scss
@@ -34,6 +34,34 @@
     color: inherit;
   }
 }
+.monoCube {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  height: 56px;
+  width: 56px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: 400;
+  color: $monoFont30;
+  text-align: center;
+  box-shadow: $monoCubeButton;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 16px;
+  transition: 0.5s;
+  &:hover {
+    box-shadow: $monoCubeButtonHover;
+  }
+  &:active {
+    box-shadow: $monoCubeButtonActive;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+}
 
 .default {
   outline: none;
