--- a/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
+++ b/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
@@ -4,32 +4,43 @@
 
 .singleMeal {
   background-color: white;
-  width: 150px;
+  width: 200px;
   border-radius: 8px;
   text-align: center;
   transition: 0.4s;
   margin: 10px;
+  box-shadow: $monoFrame;
   cursor: pointer;
-  &:hover {
-    box-shadow: $box-shadow;
-  }
 
   &__content {
-    padding: 10px;
     .image {
-      width: 100px;
+      border-radius: 8px 8px 0 0;
+      width: 100%;
       height: 100px;
       margin: 0 auto;
       img {
-        max-width: 100px;
+        border-radius: 8px 8px 0 0;
+        width: 100%;
         max-height: 100px;
-        object-fit: fill;
+        object-fit: cover;
       }
     }
     .mealTitle {
-      margin-top: 10px;
+      margin: 10px 0;
+      color: $monoFont;
+      font-size: 1.3rem;
+      font-weight: 600;
+      text-transform: capitalize;
+    }
+    .singleMeal-info {
+      text-align: left;
+      width: 80%;
+      margin: 10px auto;
       p {
-        text-transform: capitalize;
+        color: $monoFont;
+        span {
+          font-weight: 600;
+        }
       }
     }
   }
@@ -50,12 +61,11 @@
   &__content {
     width: 50%;
     max-width: 700px;
-    border-radius: 16px;
+    border-radius: 8px;
     background-color: white;
+    box-shadow: $monoFrame-noShadow;
     position: relative;
-    padding: 20px;
-    margin-top: 30px;
-    margin-bottom: 100px;
+
     @include resp(400px) {
       width: 80%;
     }
@@ -76,6 +86,7 @@
       }
       .image {
         img {
+          border-radius: 8px 0 0 0;
           width: 100%;
           height: 200px;
           @include resp(400px) {
@@ -85,7 +96,7 @@
         }
       }
       .titleAndIngredients {
-        margin: 0 auto;
+        margin: 10px auto;
         position: relative;
 
         .smallEditMainInfoBtn {
