--- a/src/components/creator/creatorComponents/usersMeals/UsersMeals.scss
+++ b/src/components/creator/creatorComponents/usersMeals/UsersMeals.scss
@@ -4,10 +4,10 @@
 
 .usersMeals {
   width: 100%;
-
+  margin-top: 30px;
   &__content {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 170px);
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 }
