--- a/src/components/creator/creatorForms/createPlan/mealOrganizer/mealOrganizer.scss
+++ b/src/components/creator/creatorForms/createPlan/mealOrganizer/mealOrganizer.scss
@@ -3,22 +3,13 @@
 @import "../../../../../styles/constants.scss";
 
 .mealOrganizer {
-  margin-top: 7px;
+  margin-top: 10px;
   width: 100%;
+  border-bottom: 1px solid rgb(223, 223, 223);
   &__content {
     .topBar {
       .actions {
         position: relative;
-        .search {
-          input {
-            width: 100%;
-            height: 28px;
-            margin: 15px auto;
-            border: none;
-            border-bottom: $input-border;
-            outline: none;
-          }
-        }
         .searchResults {
           position: absolute;
           background-color: $silver-box;
