--- a/src/components/creator/creatorForms/createPlan/plan/plan.scss
+++ b/src/components/creator/creatorForms/createPlan/plan/plan.scss
@@ -6,23 +6,16 @@
   width: 100%;
   &__content {
     .days {
+      margin-top: 30px;
       width: 100%;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
       .spaceLine {
         width: 100%;
         height: 2px;
-        background-color: $orange-main;
         margin: 20px 0;
-      }
-      &__content {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 300px);
-
-        gap: 5px;
-        justify-content: center;
-        @include resp(400px) {
-          grid-template-columns: repeat(auto-fill, 95%);
-        }
       }
     }
   }
