--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -35,8 +35,6 @@ $monoButtonShadowHover: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ecf0f3,
   4px 4px 15px #a7aaaf, -4px -4px 15px #fff;
 
 $monoButtonBackground: linear-gradient(165deg, #f2f2f2 0%, #fff 50%);
-$monoFrame: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ffffff, 8px 8px 7px #a7aaaf,
-  -8px -8px 7px #fff;
 
 $monoCubeButton: inset 3px 3px 15px #a8a8a8, inset -3px -3px 15px #ffffff,
   0px 0px 0px 5px #ffffff, 8px 8px 8px #a8a8a8, -8px -8px 15px #fff;
@@ -46,3 +44,6 @@ $monoCubeButtonHover: inset 1px 1px 5px #a8a8a8, inset -1px -1px 5px #ffffff,
 
 $monoCubeButtonActive: inset 0px 0px 2px #a8a8a8, inset -0px -0px 2px #ffffff,
   0px 0px 0px 5px #ffffff, 2px 2px 2px #a8a8a8, 0px 0px 15px #fff;
+$monoFrame: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ffffff, 8px 8px 7px #a7aaaf,
+  -8px -8px 7px #fff;
+$monoFrame-noShadow: 0px 0px 2px #a8a8a8, 0px 0px 0px 5px #ffffff;
