--- a/src/components/creator/creatorComponents/addedIngredientItem/addedIngredientItem.scss
+++ b/src/components/creator/creatorComponents/addedIngredientItem/addedIngredientItem.scss
@@ -6,8 +6,11 @@
   width: 100%;
   border-radius: 8px;
   background-color: white;
-  box-shadow: $box-shadow;
-  margin-top: 5px;
+  box-shadow: $monoFrame;
+  margin-top: 25px;
+  &:first-child {
+    margin-top: 0px;
+  }
   &__content {
     width: 95%;
     padding: 5px;
