--- a/src/components/creator/creatorComponents/editIngredient/EditIngredient.scss
+++ b/src/components/creator/creatorComponents/editIngredient/EditIngredient.scss
@@ -8,28 +8,11 @@
     width: 70%;
     margin: 0 auto;
     position: relative;
-    .searchBox {
-      width: 100%;
-      position: relative;
-      z-index: 1;
-      input {
-        width: 100%;
-        height: 28px;
-        border: $silver-box;
-        border-radius: 8px;
-        outline: none;
-        padding: 3px;
-      }
-      .searchBtn {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-      }
-    }
+
     .resultBox {
-      background-color: $silver-box;
+      background-color: $monoBg;
       border-radius: 8px;
-      box-shadow: $box-shadow;
+      box-shadow: $monoFrame;
       overflow-y: scroll;
       @include resp(400px) {
         padding: 10px;
