--- a/src/components/creator/creatorComponents/ingredientEditResults/ingredientEditResults.scss
+++ b/src/components/creator/creatorComponents/ingredientEditResults/ingredientEditResults.scss
@@ -14,6 +14,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     .imageAndName {
       display: flex;
       align-items: center;
