--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -4,24 +4,26 @@
 
 .layout {
   background: $monoBg;
+  width: 100%;
   min-height: 100vh;
 
   .dashboard {
     transition: 0.3s;
     min-height: 100vh;
     padding: 30px 0 60px 0;
-
+    margin-left: 260px;
+    @include resp(700px) {
+      margin-left: 0px;
+    }
     @include resp(500px) {
       display: block;
       min-width: 300px;
     }
     .content {
-      // margin: 0px auto;
-      // border-radius: 10px;
-      // width: 95%;
-      // height: 95%;
-      // min-height: 92vh;
-      // background-color: $silver-box;
+      margin: 0px auto;
+      border-radius: 10px;
+      min-height: 100vh;
+      background-color: $monoBg;
     }
   }
 }
