--- a/src/components/tableRow/TableRow.scss
+++ b/src/components/tableRow/TableRow.scss
@@ -2,8 +2,8 @@
 @import "../../styles/mixins.scss";
 
 .tableRow {
-  display: grid;
-  grid-template-columns: 100px 150px 150px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 100px;
   border-radius: 8px;
@@ -11,14 +11,13 @@
   box-shadow: $monoFrame;
   cursor: pointer;
   @include resp(584px) {
-    grid-template-columns: 100px 150px 100px;
+    grid-template-columns: 100px 100px 100px;
   }
 
   .image {
     width: 100px;
     height: 100%;
     border-radius: 8px 0 0 8px;
-    margin: 0 auto;
     display: grid;
     place-items: center;
     img {
