--- a/src/UiComponents/organism/PlanDisplay/PlanDisplay.scss
+++ b/src/UiComponents/organism/PlanDisplay/PlanDisplay.scss
@@ -6,6 +6,10 @@
   width: 250px;
   box-shadow: $monoFrame;
   border-radius: 8px;
+  @include resp(578px) {
+    margin: 100px auto 0 auto;
+    width: 100%;
+  }
   &__content {
     .image {
       img {
