--- a/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
+++ b/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
@@ -11,7 +11,10 @@
   margin: 10px;
   box-shadow: $monoFrame;
   cursor: pointer;
-
+  @include resp(578px) {
+    margin: 0 auto;
+    width: 80%;
+  }
   &__content {
     .image {
       border-radius: 8px 8px 0 0;
