--- a/src/components/creator/creatorForms/createPlan/day/day.scss
+++ b/src/components/creator/creatorForms/createPlan/day/day.scss
@@ -4,9 +4,15 @@
 
 .day {
   width: 310px;
+  @include resp(700px) {
+    margin: 0 auto;
+  }
+  @include resp(420px) {
+    width: 100%;
+  }
   &__content {
     padding: 10px;
-    background-color: $white;
+    background-color: $monoBg;
     box-shadow: $monoFrame;
     border-radius: 8px;
 
