--- a/src/components/creator/creatorForms/createPlan/mealOrganizer/mealOrganizer.scss
+++ b/src/components/creator/creatorForms/createPlan/mealOrganizer/mealOrganizer.scss
@@ -5,10 +5,12 @@
 .mealOrganizer {
   margin-top: 10px;
   width: 100%;
-  border-bottom: 1px solid rgb(223, 223, 223);
+  border-bottom: 1px solid rgba(233, 233, 233, 0.726);
+
   &__content {
     .topBar {
       .actions {
+        margin-top: 10px;
         position: relative;
         .searchResults {
           position: absolute;
@@ -47,17 +49,9 @@
         display: flex;
         justify-content: space-between;
         .name {
-          font-size: 16px;
+          font-size: 1.1rem;
           font-weight: 700;
           color: $font-dark;
-        }
-
-        button {
-          margin: 0 10px;
-          color: $orange-main;
-          background-color: transparent;
-          border: none;
-          cursor: pointer;
         }
       }
     }
