--- a/src/components/dayMenu/DayMenu.scss
+++ b/src/components/dayMenu/DayMenu.scss
@@ -3,6 +3,7 @@
 
 .dayMenu {
   width: 100%;
+  padding: 0 0 60px 0;
   .content {
     padding: 0 15px 0 15px;
     width: 93%;
@@ -34,6 +35,7 @@
             font-size: 2rem;
             width: 20px;
             height: 20px;
+            cursor: pointer;
           }
           .titleBox {
             .day {
@@ -59,6 +61,7 @@
       justify-content: space-between;
       width: 100%;
       height: 100%;
+
       .menu_content {
         width: 100%;
         display: flex;
