--- a/src/components/tableRow/TableRow.scss
+++ b/src/components/tableRow/TableRow.scss
@@ -9,6 +9,7 @@
   border-radius: 8px;
   margin-top: 30px;
   box-shadow: $monoFrame;
+  min-width: 300px;
   cursor: pointer;
   @include resp(584px) {
     grid-template-columns: 100px 100px 100px;
