--- a/src/pages/signIn/SignIn.scss
+++ b/src/pages/signIn/SignIn.scss
@@ -2,50 +2,48 @@
 @import "../../styles/mixins.scss";
 
 .signin {
-  background-color: $monoBg;
-  height: 100vh;
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-
   &__content {
-    padding: 46px;
-    border-radius: 30px;
-    background-color: $monoBg;
-    width: 50%;
+    width: 60%;
+    @include resp(1200px) {
+      width: 70%;
+    }
+    @include resp(800px) {
+      width: 90%;
+    }
     @include resp(500px) {
       width: 100%;
-      padding: 20px;
     }
-    .warning {
-      h1 {
-        font-size: 2.25rem;
-        color: $monoFont;
-        margin-top: 50px;
-        @include resp(500px) {
-          font-size: 1.8rem;
-        }
-      }
-      p {
-        margin-top: 24px;
+    input {
+      @include resp(500px) {
+        width: 100%;
       }
     }
-    .action {
-      margin-top: 50px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      a {
-        color: $monoFont;
-        text-decoration: none;
-        font-size: 20px;
-        font-weight: 700;
-        transition: 0.5s;
-        &:hover {
-          color: $monoFont30;
-        }
-      }
+
+    .title {
+      text-align: center;
+      padding-top: 24px;
+      font-size: 28px;
+      letter-spacing: 0.5px;
     }
+    .subTitle {
+      text-align: center;
+      font-size: 15px;
+      padding-top: 7px;
+      letter-spacing: 0.5px;
+    }
+    .form {
+      width: 100%;
+      padding: 75px 5px 5px 5px;
+    }
+  }
+  .goBack {
+    position: fixed;
+    top: 20px;
+    left: 20px;
   }
 }
