--- a/src/components/creator/creatorForms/createPlan/plan/plan.scss
+++ b/src/components/creator/creatorForms/createPlan/plan/plan.scss
@@ -5,6 +5,18 @@
 .plan {
   width: 100%;
   &__content {
+    .lock {
+      margin: 30px 0;
+      text-align: left;
+    }
+    .planTools {
+      .planInformation {
+        display: flex;
+      }
+      .action {
+        width: 200px;
+      }
+    }
     .days {
       margin-top: 30px;
       width: 100%;
