--- a/src/components/creator/creatorComponents/searchResultItem/searchResultItem.scss
+++ b/src/components/creator/creatorComponents/searchResultItem/searchResultItem.scss
@@ -4,6 +4,7 @@
 .resultItem {
   margin-top: 20px;
   width: 100%;
+  background-color: $monoBg;
   cursor: pointer;
   border-radius: 8px;
   transition: 0.3s;
