--- a/src/UiComponents/organism/Navigation/Navigation.scss
+++ b/src/UiComponents/organism/Navigation/Navigation.scss
@@ -59,8 +59,12 @@
           8px 8px 15px #a7aaaf, -8px -8px 15px #fff;
         transition: 0.5s;
         position: absolute;
+        border-radius: 8px;
         top: 70px;
-        right: 20px;
+        right: 0px;
+        hr {
+          border-color: rgba(211, 206, 206, 0.116);
+        }
       }
     }
   }
