--- a/src/components/tableRow/TableRow.scss
+++ b/src/components/tableRow/TableRow.scss
@@ -21,7 +21,7 @@
     img {
       border-radius: 8px 0 0 8px;
       width: 100px;
-      height: 100%;
+      height: 100px;
       object-fit: cover;
     }
   }
