--- a/src/UiComponents/organism/DashNavigation/DashNavigation.scss
+++ b/src/UiComponents/organism/DashNavigation/DashNavigation.scss
@@ -31,7 +31,10 @@
           margin: 30px auto;
           cursor: pointer;
         }
-
+        .loggedUser {
+          font-size: 12px;
+          color: $monoFont30;
+        }
         .navigation {
           margin-top: 30px;
           width: 235px;
