--- a/src/components/dayMenu/DayMenu.scss
+++ b/src/components/dayMenu/DayMenu.scss
@@ -26,6 +26,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+
         .nav-item {
           width: 100%;
           display: flex;
@@ -36,6 +37,7 @@
             width: 20px;
             height: 20px;
             cursor: pointer;
+            opacity: 0;
           }
           .titleBox {
             .day {
